# moreshapes

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  more_curves.lua  readme.adoc  run.lua
lua/src/: CMakeLists.txt
lua_api/: init.lua  readme.adoc
lua_api/lib/: 2d_curve_functions.lua  2d_point_generation_functions.lua  common_shape_functions.lua  curve2d.lua  curve3d.lua  p_manip.lua  points.lua  util.lua  vector.lua
mclib/: CMakeLists.txt  mc_lib.cpp  mc_lib.h
mclua/: CMakeLists.txt  mc_lua.cpp  mc_lua.h
